--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
+  <body>
     <section class="one">
-        <header>
-            <span>tindog</span>
-            <span>
-                <ul>
-                    <li>Contact</li>
-                    <li>Pricing</li>
-                    <li>Download</li>
-                </ul>
-            </span>
-        </header>
-        <div class="sec1-content">
-            <div class="sec1-txt">
-                <div class="txt-one">
-                    Meet new and interesting dogs nearby.
-                </div>
-                <div class="store">
-
-                </div>
+      <header>
+        <span>tindog</span>
+        <span>
+          <ul>
+            <li>Contact</li>
+            <li>Pricing</li>
+            <li>Download</li>
+          </ul>
+        </span>
+      </header>
+      <div class="sec1-content">
+        <div class="sec1-txt">
+          <div class="txt-one">Meet new and interesting dogs nearby.
+          </div>
+          <div class="store">
+            <div class="playstore">
+              <i class="fa-brands fa-google-play fa-2x"></i>
+              <span>Download</span>
             </div>
-            <div class="sec1-img"></div>
+            <div class="apple">
+              <i class="fa-brands fa-apple fa-2x"></i>
+                <span>Download</span>
+              </span>
+            </div>
+          </div>
         </div>
+        <div class="sec1-img">
+          <img src="WhatsApp Image 2025-03-21 at 15.43.46_0907bc5a.jpg" alt="">
+        </div>
+      </div>
+    </div>
     </section>
+    <section class="two"></section>
     <section></section>
     <section></section>
     <section></section>
     <section></section>
-    <section></section>
-</body>
+  </body>
 </html>
