--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="one">
@@ -24,24 +27,44 @@
           <div class="txt-one">Meet new and interesting dogs nearby.
           </div>
           <div class="store">
-            <div class="playstore">
-              <i class="fa-brands fa-google-play fa-2x"></i>
-              <span>Download</span>
-            </div>
             <div class="apple">
               <i class="fa-brands fa-apple fa-2x"></i>
                 <span>Download</span>
               </span>
             </div>
+            <div class="playstore">
+              <i class="fa-brands fa-google-play fa-2x"></i>
+              <span>Download</span>
+            </div>
           </div>
         </div>
         <div class="sec1-img">
-          <img src="WhatsApp Image 2025-03-21 at 15.43.46_0907bc5a.jpg" alt="">
+          <img src="download.png" alt="">
         </div>
+      </div>
+    </section>
+
+    <!-- Second Section -->
+
+    <section class="two">
+      <div class="two-inner">
+      <div class="easy">
+        <div class="tick-icon"><i class="fa-solid fa-circle-check fa-4x"></i></div>
+        <p class="tick-bold">Easy to use</p>
+        <p class="tick-normal">So easy to use, even your dog could do it</p>
+      </div>
+      <div class="AI">
+        <div class="target-icon"><i class="fa-solid fa-bullseye fa-4x"></i></div>
+        <p class="target-bold">AI driven accuracy.</p>
+        <p class="target-normal">We leverage cutting edge technology to find your dog the right match</p>
+      </div>
+      <div class="work">
+        <div class="heart-icon"><i class="fa-solid fa-heart fa-4x"></i></div>
+        <p class="heart-bold">Guaranteed to work.</p>
+        <p class="heart-normal">Find the love of your dog's life or your money back.</p>
       </div>
     </div>
     </section>
-    <section class="two"></section>
     <section></section>
     <section></section>
     <section></section>
