--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="media.css">
   </head>
   <body>
     <section class="one">
@@ -65,9 +66,107 @@
       </div>
     </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+
+    <!-- Third Section -->
+
+    <section class="three">
+      <section class="three-txt">
+        <div>
+          I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.
+        </div>
+        <div class="dog-img">
+          <div class="img1"></div>
+          <div class="img-txt"> Meeko, New York</div>
+        </div>
+      </section>
+      <section class="three-logo">
+        <div class="TNW">
+          <img src="download3.png" alt="">
+        </div>
+        <div class="Business">
+          <img src="download (1).png" alt="">
+        </div>
+        <div class="mashable">
+          <img src="download (2).png" alt="">
+        </div>
+      </section>
+    </section>
+
+    <!-- Fourth Section -->
+
+    <section class="four">
+      <div class="four1">
+        <p>A Plan for Every Dog's Needs</p>
+        <p>Simple and affordable price plans for your and your dog.</p>
+      </div>
+      <div class="four2">
+        <div class="chihuaua">
+          <div class="heading">
+            Chihuahua
+          </div>
+          <div class="free">
+            <p>FREE</p>
+          <p>5 Matches Per Day</p>
+          <p>10 Messages Per Day</p>
+          <p>Unlimited App Usage</p>
+        </div>
+          <div class="signup"><button>Sign Up</button></div>
+        </div>
+        <div class="labrador">
+          <div class="heading">
+            Labrador
+          </div>
+          <div class="free">
+            <p>$49 / mo</p>
+          <p>Unlimited Matches</p>
+          <p>Unlimited Messages</p>
+          <p>Unlimited App Usage</p>
+        </div>
+          <div class="signup1"><button>Sign Up</button></div>
+        </div>
+        <div class="mastiff">
+          <div class="heading">
+            Mastiff
+          </div>
+          <div class="free">
+            <p>$99 / mo</p>
+            <p>Pirority Listing</p>
+          <p>Unlimited Matches</p>
+          <p>Unlimited Messages</p>
+          <p>Unlimited App Usage</p>
+        </div>
+          <div class="signup2"><button>Sign Up</button></div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <section class="three" style="height: 50%;">
+      <section class="three-txt">
+        <p style="font-size: 32px; text-align: center;">Find the True Love of Your Dog's Life Today.</p>
+        <div class="store" style="font-size: 16px;display: flex;justify-content: center;">
+          <div class="apple" style="gap: 5%;">
+            <i class="fa-brands fa-apple fa-2x"></i>
+              <span>Download</span>
+            </span>
+          </div>
+          <div class="playstore" style="gap: 5%;">
+            <i class="fa-brands fa-google-play fa-2x"></i>
+            <span>Download</span>
+          </div>
+        </div>
+    </section>
+    </section>
+    <section class="foot">
+      <div class="icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-solid fa-envelope"></i>
+      </div>
+      <div class="copyright">
+        @anishmoktan | @appbrewery
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
